<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="findback_key">找回密码</string>
    <string name="back">返回</string>
    <string name="autosavepassword">保存密码</string>
    <string name="modify">修改</string>
    <string name="forgget_key">忘记密码?</string>
    <string name="app_name">花旗小助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="set">设置</string>
	<string name="alterpassword">修改密码</string>
	<string name="vibrator_remind">震动提醒</string>
	<string name="sound_remind">声音提醒</string>
	<string name="version_examine">版本检查</string>
	<string name="no_disturb">免打扰</string>
	<string name="invisiable">隐身</string>
	<string name="feedback">反馈建议</string>
	<string name="contact_us">联系我们</string>
	<string name="exit_login">退出登录</string>
	<string name="exit">退出程序</string>
	<string name="sure">确定</string>
	<string name="save">保存</string>
	<string name="consult">对话</string>
	<string name="leave_word">留言</string>
	<string name="enterprise_data">企业资料</string>
	<string name="submit">提交</string>
	<string name="suggestion">请填写您的建议，谢谢。。。。</string>
	<string name="company">成都锦途网络科技有限公司</string>
	<string name="callaftersale">呼叫售后服务</string>
	<string name="callproduct">呼叫产品中心</string>
	<string name="product_name">指尖上的客服系统</string>
	<string name="login">登录</string>
	<string name="sign">MeChat</string>
	<string name="password">密码</string>
	<string name="enterprise_name">企业名称</string>
	<string name="enterprise_sign">企业图标</string>
	<string name="contactor">联系人</string>
	<string name="phone">电话</string>
	<string name="phone_site">手机版网址</string>
	<string name="email">帐号</string>
	<string name="websiteurl">企业网址</string>
	<string name="address">企业地址</string>
	<string name="send_email">找回密码</string>
	<string name="leave_word_mail">留言邮箱</string>
	 <string name="input_your_email">输入您注册的邮箱地址</string>
	<string name="register1">欢迎使用花旗银行小助手</string>
	<string name="solve_submit">处理</string>
	<string name="solve_call">电话呼叫</string>
	<string name="get_more">加载更多</string>
	<string name="info_getting">正在加载...</string>
	<string name="logining">正在登录</string>
	<string name="transfer">客服转接</string>
	<string name="user_info">客户资料</string>
	<string name="chat_hint">输入内容......</string>
	<string name="imgae_view">image</string>
	<string name="solve_hint">处理备注...</string>
	<string name="network">当前网络不可用，请检查你的网络设置</string>
	<string name="send_msg">发送</string>
	<string name="pop_window_hint">未填写</string>
	<string name="networkstateinfo">网络连接失败,请检查您的网络设置</string>
	<string name="networkstateinfofresh">网络状态不好，请点击刷新</string>
	<string name="account">账户</string>
</resources>