<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/re"
   >
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/maintab_toolbar_bg"
    >
<ImageView 
    android:id="@+id/cancelalert"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:contentDescription="@string/app_name"
    android:src="@drawable/singchat_back"
    />
<TextView 
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/alterpassword"
    android:textSize="@dimen/set"
    android:gravity="center_vertical|center_horizontal"
   	android:layout_centerInParent="true"
    />
<Button 
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:text="@string/save" 
   	android:layout_alignParentRight="true"
   	android:id="@+id/save"
    />
</RelativeLayout>
<EditText 
    android:layout_marginTop="20dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/alterpassword"
    android:id="@+id/alertet"
    />
</LinearLayout>