<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/g_child_page_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/ic_comm_title_bg" >

        <Button
            android:id="@+id/cancelfeedback"
            android:layout_width="45dip"
            android:layout_height="46dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_background"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/feedback"
            android:textColor="@color/title_color"
            android:textSize="@dimen/set" />
    </RelativeLayout>

    <EditText
        android:id="@+id/feedback_content"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_text_bg"
        android:gravity="top|left"
        android:hint="@string/suggestion"
        android:paddingLeft="5dip"
        android:paddingTop="10dp"
        android:textColorHint="#999" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom" >
        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/login_btn_background"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>