<!--
 <ScrollView 
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mobile_set"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/g_child_page_bg_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mobile_set_head"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_comm_title_bg"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/set"
        android:textColor="@color/title_color"
        android:textSize="@dimen/set" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dip"
                android:text="@string/sound_remind"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/sound_setbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_butn_toggle"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/grayline" />
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dip"
                android:text="@string/vibrator_remind"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/vibrator_setbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_butn_toggle"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
   
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:orientation="vertical" >

     
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/version_set"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/version_examine"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:src="@drawable/asr_list_item_more_icon" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/grayline" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/feedback_set"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/feedback"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/asr_list_item_more_icon" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/grayline" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/contanct_set"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dip"
                android:text="@string/contact_us"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:src="@drawable/asr_list_item_more_icon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/mobile_exit"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/exit_background"
            android:text="@string/exit_login"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
<!-- </ScrollView> -->
